[package]
name = "astrotools"
version = "0.10.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/devDucks/astrotools/"
readme = "README.md"
description = "Basic building block for the lightspeed protocol and lightspeed compliant drivers"

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v5"] }
rumqttc = "0.25"
log = "0.4"
ctrlc = "3"

