[package]
name = "astrotools"
version = "0.12.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/devDucks/astrotools/"
readme = "README.md"
description = "Basic building block for the lightspeed protocol and lightspeed compliant drivers"

[features]
default = ["driver"]
wire    = []
driver  = ["wire", "dep:rumqttc", "dep:ctrlc", "dep:serialport"]
server  = ["wire"]
full    = ["driver", "server"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
log = "0.4"

# Driver-only deps
rumqttc    = { version = "0.25", optional = true }
ctrlc      = { version = "3",    optional = true }
serialport = { version = "4.9",  optional = true }
